# cmake-example-project-cxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: run_unittests.yml  smoketest.yml
app/: CMakeLists.txt  main.cpp
app/components/example/: CMakeLists.txt
app/components/example/include/: ExampleApp.h
app/components/example/src/: ExampleApp.cpp
app/components/example/test/: ExampleApp_test.cpp
scripts/: build.sh  build_and_run.sh  test.sh
